--- a/credits.html
+++ b/credits.html
@@ -28,9 +28,9 @@
             <a href="about-us.html" class="nav-link burntred">
                 <i class="fa-duotone fa-square-info"></i>
                 ABOUT US</a>
-            <a href="contact-us.html" class="nav-link burntred">
-                <i class="fa-duotone fa-map-location-dot"></i>
-                CONTACT US</a>
+                <a href="contact-us.html" class="nav-link burntred">
+                    <i class="fa-duotone fa-map-location-dot"></i>
+                    CONTACT US</a>
             <a href="credits.html" class="nav-link burntred">
                 <i class="fa-duotone fa-memo-circle-info"></i>
                 CREDITS</a>
@@ -45,52 +45,12 @@
         <div class="content">
             <div class="content-box">
                 <div class="content-card">
-                    <span class="title">Welcome to
-                        <span class="burntred">Cakes For All Occasions!</span>
-                    </span>
-                    <span class="subtitle">We have the cakes for all your special events!</span>
-                    </span>
-                    <p>Special Cakes for All Occasions is the answer to all your cake needs, serving a wide variety of
-                        sweets perfect for an office treat, birthday and other celebrations.
-                    </p>
-                    <p>Our cakes are made with the finest ingredients, and are available in a variety of flavours and
-                        sizes. We also offer a range of gluten free and vegan options.
-                    </p>
-                    <p>Our cakes are available for pick up or delivery. We deliver to the Sydney CBD and surrounding
-                        suburbs.
-                    </p>
-                    <span class="title">
-                        Bakery Hours:
-                    </span>
-                    <br>
-                    <span class="subtitle">
-                        Monday-Friday 8.30 am to 3 pm
+                    <span class="title">CAKES for SALE
                     </span>
                 </div>
             </div>
             <div class="content-box">
                 <div class="content-card">
-                    <span class="title">Come and visit us!</span>
-                    <br>
-                    <div style="width: 100%">
-                        <iframe width="100%" height="150" frameborder="0" scrolling="no" marginheight="0"
-                            marginwidth="0"
-                            src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=23%20Pacific%20Hwy,%20Sydney%20NSW+(Special%20Cakes%20for%20All%20Occasions)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
-                            <a href="https://www.maps.ie/population/">Population calculator map</a>
-                        </iframe>
-                    </div>
-                    <ul class="unstyled-list">
-                        <li>
-                            <i class="fa-duotone fa-map-location-dot"></i>: 23 Pacific Hwy, Sydney NSW
-                        </li>
-                        <li>
-                            <i class="fa-duotone fa-phone-volume"></i>: 02 1234 5678
-                        </li>
-                        <li>
-                            <i class="fa-duotone fa-envelope-open"></i>:
-                            <a href="mailto:specialcakes@email.com">specialcakes@email.com</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
