add credits page + update links

--- a/about-us.html
+++ b/about-us.html
@@ -51,8 +51,10 @@
                         Special Cakes for All Occasions started a year ago by the store owner, Sam Rice, who wanted to
                         share their love of baking with the world. Come and taste all the delightful cakes!
                     </p>
-                    <div class="card-img-top "><img src="images/large/jobInterest975.jpg"
-                            style="width: 100%; background-size: contain;"></div>
+                    <figure class="figure">
+                        <img src="images/large/jobInterest975.jpg" class="figure-img content-card-img" alt="Two people chatting in a bakery setting">
+                        <figcaption class="figure-caption floatright"><a href="https://t.ly/CNq5A">Image Sourced by Adobe Stock Images</a></figcaption>
+                      </figure>
                 </div>
             </div>
             <div class="content-box">
