--- a/credits.html
+++ b/credits.html
@@ -28,9 +28,9 @@
             <a href="about-us.html" class="nav-link burntred">
                 <i class="fa-duotone fa-square-info"></i>
                 ABOUT US</a>
-                <a href="contact-us.html" class="nav-link burntred">
-                    <i class="fa-duotone fa-map-location-dot"></i>
-                    CONTACT US</a>
+            <a href="contact-us.html" class="nav-link burntred">
+                <i class="fa-duotone fa-map-location-dot"></i>
+                CONTACT US</a>
             <a href="credits.html" class="nav-link burntred">
                 <i class="fa-duotone fa-memo-circle-info"></i>
                 CREDITS</a>
@@ -45,12 +45,12 @@
         <div class="content">
             <div class="content-box">
                 <div class="content-card">
-                    <span class="title">CAKES for SALE
-                    </span>
-                </div>
-            </div>
-            <div class="content-box">
-                <div class="content-card">
+                    <span class="title">CREDITS</span>
+                    <ul>
+                        <li><a href="https://stock.adobe.com/">Adobe</a> - free stock images</li>
+                        <li><a href="https://getboostrap.com">Bootstrap</a> - Some CSS sourced and modified</li>
+                        <li><a href="https://github.com">Free website hosting</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
             <a href="about-us.html" class="footer-link burntred">
                 <i class="fa-duotone fa-square-info"></i>
                 ABOUT US</a>
-            <a href="#" class="footer-link burntred">
+            <a href="contact-us.html" class="footer-link burntred">
                 <i class="fa-duotone fa-map-location-dot"></i>
                 CONTACT US</a>
             <a href="credits.html" class="footer-link burntred">
