--- a/credits.html
+++ b/credits.html
@@ -47,10 +47,25 @@
                 <div class="content-card">
                     <span class="title">CREDITS</span>
                     <ul>
-                        <li><a href="https://stock.adobe.com/">Adobe</a> - free stock images</li>
+                        <li><a href="https://stock.adobe.com/">Adobe</a> - Free stock images</li>
                         <li><a href="https://getboostrap.com">Bootstrap</a> - Some CSS sourced and modified</li>
-                        <li><a href="https://github.com">Free website hosting</a></li>
+                        <li><a href="https://github.com">Github</a> - Free website hosting</li>
+                        <li><a href="https://fontawesome.com">Font Awesome</a> Free icons</li>
+                        <li><a href="https://code.visualstudio.com/">Visual Studio Code</a> - Free IDE to create this
+                            website</li>
                     </ul>
+                    <hr>
+                    <span class="title">Licenses</span>
+                    <p>
+                        All images sourced from Adobe Stock Images are licensed under the <a
+                            href="https://stock.adobe.com/au/enterprise-conditions#extendedLicenses">Adobe Stock
+                            License</a>.
+                        <br>
+                        All images sourced from Font Awesome are licensed under the <a
+                            href="https://fontawesome.com/license">Font Awesome License</a>.
+                        <br>
+                        Created and designed by Mitchell Kirk for TAFE NSW.
+                    </p>
                 </div>
             </div>
         </div>
