--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                     <span class="subtitle">
                         Monday-Friday 8.30 am to 3 pm
                     </span>
+                    <figure class="figure">
+                        <img src="images/large/muffins975.jpg" class="figure-img content-card-img" alt="Multiple chocolate brownie/muffins">
+                        <figcaption class="figure-caption floatright"><a href="https://shorturl.at/ptGZ2">Image Sourced by Adobe Stock Images</a></figcaption>
+                      </figure>
                 </div>
             </div>
             <div class="content-box">
